--- a/01_Introduction/03_Using_Variables_and_Placeholders/03_placeholders.ipynb
+++ b/01_Introduction/03_Using_Variables_and_Placeholders/03_placeholders.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Placeholders\n",
     "\n",
@@ -16,12 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -32,33 +25,32 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Start graph session"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<tensorflow.python.client.session.Session object at 0x7f0c01a796d8>\n"
+     ]
+    }
+   ],
    "source": [
-    "sess = tf.Session()"
+    "sess = tf.Session()\n",
+    "print(sess)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Declare a placeholder\n",
     "\n",
@@ -67,12 +59,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "x = tf.placeholder(tf.float32, shape=(4, 4))"
@@ -80,10 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "For illustration on how to use the placeholder, we create input data for it and an operation we can visualize on Tensorboard.\n",
     "\n",
@@ -92,21 +77,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.1175806   0.88121527  0.00815445  0.93555111]\n",
-      " [ 0.97369134  0.14595009  0.16398087  0.76570976]\n",
-      " [ 0.67633879  0.11748746  0.01266815  0.32564184]\n",
-      " [ 0.99007022  0.6825515   0.54524553  0.01503101]]\n"
+      "[[0.9534645  0.6267472  0.6814405  0.7473649 ]\n",
+      " [0.6520479  0.05889124 0.48952216 0.6905248 ]\n",
+      " [0.6347805  0.12428273 0.1202135  0.5371551 ]\n",
+      " [0.202402   0.03815596 0.3875865  0.60732317]]\n"
      ]
     }
    ],
@@ -123,10 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "To visualize this in Tensorboard, we merge summaries and write to a log file."
    ]
@@ -134,11 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "merged = tf.summary.merge_all()\n",
@@ -147,10 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "We run the following command at the prompt:\n",
     "\n",
@@ -163,10 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "![Placeholders_in_Tensorboard](https://github.com/nfmcclure/tensorflow_cookbook/raw/master/01_Introduction/images/03_placeholder.png)"
    ]
@@ -188,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
